basic image map

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <link rel="stylesheet" type="text/css" href="built/style.css"/>
   </head>
   <body>
-    <div id="boardDiv"/>
+    <div id="boardDiv"></div>
+    <div id="imageLoaderDiv"></div>
     <script src="https://fb.me/react-15.0.1.min.js"></script>
     <script src="https://fb.me/react-dom-15.0.1.min.js"></script>
     <script type="text/javascript" src="built/board.js"></script>
+    <script type="text/javascript" src="built/imageLoader.js"></script>
     <script type="text/javascript" src="built/index.js"></script>  
   </body>
 </html>
